# travistest

./: .travis.yml  CMakeLists.txt  DeltaExcel.xll  README.md  travis_setup.sh
src/: CMakeLists.txt  MessageFormat.cpp
